--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head></head>
   <body>
     <div id="react-root"></div>
-    <script type="application/javascript" src="/public/webpacker_init.js"></script>
+    <script type="application/javascript" src="/public/webpacker-init.js"></script>
+    <script>WebpackerInit.loadPack("application.js")</script>
   </body>
 </html>
